fixed alignment on Project

--- a/public/style.css
+++ b/public/style.css
@@ -523,6 +523,7 @@ main {
   display: flex;
   flex-flow: column;
   justify-content: center;
+  align-items: center;
 }
 
 .single-project-clear {
